Split Reminders out into Orleans.Reminders package (#7603)
Co-authored-by: ReubenBond <rebond@microsoft.com>

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -52,6 +52,7 @@
   <PropertyGroup>
     <!-- System packages -->
     <SystemDiagnosticsPerformanceCounterVersion>6.0.0</SystemDiagnosticsPerformanceCounterVersion>
+    <SystemCollectionsImmutableVersion>6.0.0</SystemCollectionsImmutableVersion>
     <SystemDiagnosticsDiagnosticSourceVersion>6.0.0</SystemDiagnosticsDiagnosticSourceVersion>
     <SystemNetNameResolutionVersion>4.3.0</SystemNetNameResolutionVersion>
     <MicrosoftDotNetPlatformAbstractionsVersion>3.1.6</MicrosoftDotNetPlatformAbstractionsVersion>
