--- a/src/Orleans.CodeGenerator/Orleans.CodeGenerator.csproj
+++ b/src/Orleans.CodeGenerator/Orleans.CodeGenerator.csproj
@@ -10,6 +10,7 @@
     <DevelopmentDependency>true</DevelopmentDependency>
     <IsOrleansFrameworkPart>false</IsOrleansFrameworkPart>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
+    <IsRoslynComponent>true</IsRoslynComponent>
   </PropertyGroup>
 
   <ItemGroup>
@@ -63,7 +64,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <AssemblyAttribute Remove="Orleans.Metadata.FrameworkPartAttribute"/>
+    <AssemblyAttribute Remove="Orleans.Metadata.FrameworkPartAttribute" />
   </ItemGroup>
 
 </Project>
